Added readline-devel and ncurses-devel in readme for CentOS

--- a/readme.centos5.8
+++ b/readme.centos5.8
@@ -11,14 +11,8 @@
 # git
 yum install git
 
-# gcc
-yum install gcc gcc-c++
-
-# zlib-devel
-yum install zlib-devel
-
-# openssl-devel
-yum install openssl-devel
+# gcc and other libraries
+yum install gcc gcc-c++ zlib-devel openssl-devel readline-devel ncurses-devel
 
 # rbenv & ruby-build
 git clone git://github.com/sstephenson/rbenv.git .rbenv
