--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,8 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  date_and_time: Date & Time
+  venue: Venue
+  speaker: Speaker
+  title: Title
+  abstract: Abstract
