--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,3 +8,10 @@ ja:
   language: 言語
   en: 英語
   ja: 日本語
+
+  date:
+    month_names: [~, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+    order:
+      - :year
+      - :month
+      - :day
