--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,13 @@ en:
   speaker: Speaker
   title: Title
   abstract: Abstract
+  
+  personal_list: Your personal list
+
   language: Language
+  
   en: English
   ja: Japanese
+  
+
+  
