Show '(awaiting approval)'

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,7 @@ en:
   abstract: Abstract
   
   personal_list: Your personal list
+  waiting_for_approval: awaiting approval
 
   language: Language
   
