--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -12,6 +12,8 @@ ja:
   en: 英語
   ja: 日本語
 
+  waiting_for_approval: 承認待ち
+
   date:
     month_names: [~, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
     order:
