--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,3 +20,5 @@ ja:
       - :year
       - :month
       - :day
+
+  tickle_abuse: "このメールが不適切だと思われる場合はお手数ですが %s まで転送して下さい。その時メールの本文に ID: %d を含めて頂くと問題の解決に役立ちます。"
