Private list/talk should not be added to public lists.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,3 +22,5 @@ ja:
       - :day
 
   tickle_abuse: "このメールが不適切だと思われる場合はお手数ですが %s まで転送して下さい。その時メールの本文に ID: %d を含めて頂くと問題の解決に役立ちます。"
+
+  cannot_add_to_public: "非公開のセミナーやリストを公開リストに加えようとしました。"
