--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,4 @@ en:
   
   tickle_abuse: "If you think that this e-mail was sent inappropriately, please forward it to %s. We will use this code: %d to figure out who sent it, and to take appropriate action."
   
+  cannot_add_to_public: "You tried to add a private talk/list to a public list."
