Added direct edit button for list_details.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,8 @@ en:
   speaker: Speaker
   title: Title
   abstract: Abstract
+
+  edit: Edit
   
   personal_list: Your personal list
   waiting_for_approval: awaiting approval
