Introduced title_message.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,8 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  title_message: Organize, manage and share talks easily
+
   date_and_time: Date & Time
   venue: Venue
   speaker: Speaker
